--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -184,109 +184,171 @@
         <li id="psicash-block" class="hidden">
           <div data-match-width=".main-nav a">
             <div id="psicash-interface-zerobalance" class="psicash-interface hidden">
-              <div class="psicash-title-balance" data-i18n="[html]psicash#ui-zerobalance-title">Need a Speed&nbsp;Boost?</div>
-              <div class="button-container">
-                <a class="psicash-buy-psi btn btn-primary" href="#">
-                  <span data-i18n="psicash#ui-buypsi">Buy PsiCash</span> <img class="coin" src="psicash_coin.png">
-                </a>
-              </div>
-              <div><small><a href="#">?</a></small></div>
-            </div>
-            <div id="psicash-interface-nsfbalance" class="psicash-interface hidden">
-              <div class="psicash-title-balance">
-                PsiCash
-                <span class="psicash-balance-coin">
-                    <img class="coin" src="psicash_coin.png">
-                    <span class="psicash-balance"></span>
-                  </span>
+              <fieldset>
+                <div class="psicash-title-balance" data-i18n="[html]psicash#ui-zerobalance-title">Need a Speed&nbsp;Boost?</div>
+                <div class="button-container">
+                  <a class="psicash-buy-psi btn btn-primary" href="#">
+                    <span data-i18n="psicash#ui-buypsi">Buy PsiCash</span> <img class="coin" src="psicash_coin.png">
+                  </a>
                 </div>
-              <div class="button-container">
-                <button type="button" class="btn btn-primary disabled" disabled>
-                  <span data-i18n="[html]psicash#ui-nsfbalance-buttontext">Needed for Speed&nbsp;Boost</span><br>
-                  <img class="coin" src="psicash_coin_grey.png">&nbsp;<span class="psicash-1hr-price"></span>
-                </button>
-              </div>
-              <div class="button-container">
-                <a class="psicash-buy-psi btn btn-small" data-i18n="psicash#ui-buymorepsi" href="#">
-                  Buy more PsiCash
-                </a>
-              </div>
-            </div>
-            <div id="psicash-interface-enoughbalance" class="psicash-interface hidden">
-                <div class="psicash-title-balance">
-                PsiCash
-                <span class="psicash-balance-coin">
-                  <img class="coin" src="psicash_coin.png">
-                  <span class="psicash-balance"></span>
-                </span>
-              </div>
-              <div class="button-container">
-                <button id="psicash-buy-1hr" type="button" class="btn btn-primary">
-                  <span data-i18n="[html]psicash#ui-enoughbalance-buttontext">Start Speed&nbsp;Boost</span><br>
-                  <img class="coin" src="psicash_coin_grey.png">&nbsp;<span class="psicash-1hr-price"></span>
-                </button>
-              </div>
-              <div class="button-container">
-                <a class="psicash-buy-psi btn btn-small" data-i18n="psicash#ui-buymorepsi" href="#">
-                  Buy more PsiCash
-                </a>
-              </div>
-            </div>
-            <div id="psicash-interface-buyingboost" class="psicash-interface hidden">
-              <div class="psicash-title-balance">
-                PsiCash
-                <span class="psicash-balance-coin">
-                    <img class="coin" src="psicash_coin.png">
-                    <span class="psicash-balance"></span>
-                  </span>
-                </div>
-              <div class="button-container">
-                <button type="button" class="btn btn-primary disabled" disabled>
-                  <i class="icon-spinner2 icon-spin"></i>
-                  <span data-i18n="[html]psicash#ui-buyingboost-buttontext">Starting Speed&nbsp;Boost!</span>
-                </button>
-              </div>
-              <div class="button-container">
-                <a class="psicash-buy-psi btn btn-small" data-i18n="psicash#ui-buymorepsi" href="#">
-                  Buy more PsiCash
-                </a>
-              </div>
-            </div>
-            <div id="psicash-interface-activeboost" class="psicash-interface hidden">
-              <div class="psicash-title-balance">
-                PsiCash
-                <span class="psicash-balance-coin">
-                    <img class="coin" src="psicash_coin.png">
-                    <span class="psicash-balance"></span>
-                  </span>
-                </div>
-              <div class="button-container">
-                <button type="button" class="btn btn-success disabled" disabled>
-                  <span class="speed-boost-time-remaining"></span>
-                </button>
-              </div>
-              <div class="button-container">
-                <a class="psicash-buy-psi btn btn-small" data-i18n="psicash#ui-buymorepsi" href="#">
-                  Buy more PsiCash
-                </a>
-              </div>
-            </div>
-            <div id="psicash-interface-vpndisabled" class="psicash-interface hidden">
-              <div>
-                <span class="label label-warning">
-                  <i class="icon-prohibited"></i>
-                  <span data-i18n="settings#vpn-incompatible-label">L2TP/IPSec</span>
-                </span>
-              </div>
+              </fieldset>
+            </div><!-- #psicash-interface-zerobalance -->
 
-              <div class="psicash-title-balance">
-                PsiCash
-                <span class="psicash-balance-coin">
+            <div id="psicash-interface-nsfbalance" class="psicash-interface hidden">
+              <fieldset>
+                <div class="psicash-title-balance">
+                  PsiCash
+                  <span class="psicash-balance-coin">
                     <img class="coin" src="psicash_coin.png">
                     <span class="psicash-balance"></span>
                   </span>
                 </div>
-            </div>
+                <div class="button-container">
+                  <button type="button" class="btn btn-primary disabled" disabled>
+                    <span data-i18n="[html]psicash#ui-nsfbalance-buttontext">Needed for Speed&nbsp;Boost</span><br>
+                    <img class="coin" src="psicash_coin_grey.png">&nbsp;<span class="psicash-1hr-price"></span>
+                  </button>
+                </div>
+                <div class="button-container">
+                  <a class="psicash-buy-psi btn btn-small" data-i18n="psicash#ui-buymorepsi" href="#">
+                    Buy more PsiCash
+                  </a>
+                </div>
+              </fieldset>
+            </div><!-- #psicash-interface-nsfbalance -->
+
+            <div id="psicash-interface-enoughbalance" class="psicash-interface hidden">
+              <fieldset>
+                <div class="psicash-title-balance">
+                  PsiCash
+                  <span class="psicash-balance-coin">
+                    <img class="coin" src="psicash_coin.png">
+                    <span class="psicash-balance"></span>
+                  </span>
+                </div>
+
+                <div class="autospend-container">
+
+                  <div class="button-container">
+                    <button id="psicash-buy-1hr" type="button" class="btn btn-primary">
+                      <span data-i18n="[html]psicash#ui-enoughbalance-buttontext">Start Speed&nbsp;Boost</span><br>
+                      <img class="coin" src="psicash_coin_grey.png">&nbsp;<span class="psicash-1hr-price"></span>
+                    </button>
+                  </div>
+
+                  <div class="checkbox-container">
+                    <div class="controls checkbox checkbox-primary">
+                      <input type="checkbox" id="psicash-interface-enoughbalance-autospend" checked="true" class="autospend">
+                      <label class="checkbox" for="psicash-interface-enoughbalance-autospend">
+                        Automatic
+                      </label>
+                    </div>
+                  </div>
+
+                </div><!-- .autospend-container -->
+
+                <div class="button-container">
+                  <a class="psicash-buy-psi btn btn-small" data-i18n="psicash#ui-buymorepsi" href="#">
+                    Buy more PsiCash
+                  </a>
+                </div>
+              </fieldset>
+            </div><!-- #psicash-interface-enoughbalance -->
+
+            <div id="psicash-interface-buyingboost" class="psicash-interface hidden">
+              <fieldset>
+                <div class="psicash-title-balance">
+                  PsiCash
+                  <span class="psicash-balance-coin">
+                    <img class="coin" src="psicash_coin.png">
+                    <span class="psicash-balance"></span>
+                  </span>
+                </div>
+
+                <div class="autospend-container">
+
+                  <div class="button-container">
+                    <button type="button" class="btn btn-primary disabled" disabled>
+                      <i class="icon-spinner2 icon-spin"></i>
+                      <span data-i18n="[html]psicash#ui-buyingboost-buttontext">Starting Speed&nbsp;Boost!</span>
+                    </button>
+                  </div>
+
+                  <div class="checkbox-container">
+                    <div class="controls checkbox checkbox-primary">
+                      <input type="checkbox" id="psicash-interface-buyingboost-autospend" checked="true" class="autospend disabled" disabled>
+                      <label class="checkbox" for="psicash-interface-buyingboost-autospend">
+                        Automatic
+                      </label>
+                    </div>
+                  </div>
+
+                </div><!-- .autospend-container -->
+
+                <div class="button-container">
+                  <a class="psicash-buy-psi btn btn-small" data-i18n="psicash#ui-buymorepsi" href="#">
+                    Buy more PsiCash
+                  </a>
+                </div>
+              </fieldset>
+            </div><!-- #psicash-interface-buyingboost -->
+
+            <div id="psicash-interface-activeboost" class="psicash-interface hidden">
+              <fieldset>
+                <div class="psicash-title-balance">
+                  PsiCash
+                  <span class="psicash-balance-coin">
+                    <img class="coin" src="psicash_coin.png">
+                    <span class="psicash-balance"></span>
+                  </span>
+                </div>
+
+                <div class="autospend-container">
+
+                  <div class="button-container">
+                    <button type="button" class="btn btn-success disabled" disabled>
+                      <span class="speed-boost-time-remaining"></span>
+                    </button>
+                  </div>
+
+                  <div class="checkbox-container">
+                    <div class="controls checkbox checkbox-primary">
+                      <input type="checkbox" id="psicash-interface-activeboost-autospend" checked="true" class="autospend">
+                      <label class="checkbox" for="psicash-interface-activeboost-autospend">
+                        Automatic
+                      </label>
+                    </div>
+                  </div>
+
+                </div><!-- .autospend-container -->
+
+                <div class="button-container">
+                  <a class="psicash-buy-psi btn btn-small" data-i18n="psicash#ui-buymorepsi" href="#">
+                    Buy more PsiCash
+                  </a>
+                </div>
+              </fieldset>
+            </div><!-- #psicash-interface-activeboost -->
+
+            <div id="psicash-interface-vpndisabled" class="psicash-interface hidden">
+              <fieldset>
+                <div>
+                  <span class="label label-warning">
+                    <i class="icon-prohibited"></i>
+                    <span data-i18n="settings#vpn-incompatible-label">L2TP/IPSec</span>
+                  </span>
+                </div>
+
+                <div class="psicash-title-balance">
+                  PsiCash
+                  <span class="psicash-balance-coin">
+                    <img class="coin" src="psicash_coin.png">
+                    <span class="psicash-balance"></span>
+                  </span>
+                </div>
+              </fieldset>
+            </div><!-- #psicash-interface-vpndisabled -->
+
           </div>
         </li><!-- /#psicash-block -->
 
@@ -1485,6 +1547,13 @@
 
           <hr>
 
+          <form class="form-inline" id="debug-SystemIdleMillis">
+            <label>SystemIdleMillis</label>
+            <input type="text" value="1000" placeholder="1, 10000, 9999999, etc." style="width:10em">
+          </form>
+
+          <hr>
+
           <form class="form-inline" id="debug-RefreshPsiCash">
             <label>RefreshPsiCash</label>
             <input id="debug-RefreshPsiCash-balance" type="number" step="0.1" min="0" placeholder="balance in gigapsi" style="width:10em">
@@ -1499,7 +1568,7 @@
             <label>PsiCash SpeedBoost Purchase Response</label>
             <select id="debug-PsiCashSpeedBoost-response">
               <option value="error">Error</option>
-              <option value="Success">Success</option>
+              <option value="Success" selected>Success</option>
               <option value="ExistingTransaction">ExistingTransaction</option>
               <option value="InsufficientBalance">InsufficientBalance</option>
               <option value="TransactionAmountMismatch">TransactionAmountMismatch</option>
